--- a/liirum.html
+++ b/liirum.html
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body>
-    <p>Tämä teksti käyttää Figtree-fonttia. Muutan vähän tekstiä.</p>
+    <p>Tämä teksti käyttää Figtree-fonttia. Muutan vähän tekstiä. Lisää liirumia</p>
 </body>
 </html>
